# hordesat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makehordesat.sh
hordesat-src/: Makefile
hordesat-src/solvers/: Lingeling.cpp  MiniSat.h
src/solvers/: Lingeling.h  MiniSat.cpp  PortfolioSolverInterface.h
